--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,20 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #000;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+/* .ant-layout{
+  display: grid; 
+  grid-template-rows: auto 1fr auto; 
+  min-height: 100vh;
+} */
+
+.ant-layout-footer{
+  margin-bottom: 0px;
 }
